<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgraund_splash"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/style_top_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nameTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="36sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:background="@drawable/test_page"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/nextBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/quiz"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/variantA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="15dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/circle">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/a"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/answerA"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center_vertical"
                android:text="@string/variantA"
                android:textColor="@color/purple_700"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/variantB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="15dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/circle">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/b"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/answerB"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center_vertical"
                android:text="@string/variantB"
                android:textColor="@color/purple_700"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/variantC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="15dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/circle">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/c"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/answerC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center_vertical"
                android:text="@string/variantC"
                android:textColor="@color/purple_700"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/variantD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="15dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/circle">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/d"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/answerD"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/montserrat_bold"
                android:gravity="center_vertical"
                android:text="@string/variantD"
                android:textColor="@color/purple_700"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button"
        android:enabled="false"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/counQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

</androidx.constraintlayout.widget.ConstraintLayout>